--- a/demo/Dota2/index.html
+++ b/demo/Dota2/index.html
@@ -147,7 +147,7 @@
                     <span></span>
                 </a>            
             </div>
-            <div class="right_btn">
+            <div class="col-xs-4 right_btn">
                 <a href="#" class="btn btn_source">
                     <span></span>
                 </a>
@@ -198,42 +198,42 @@
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵公</p>
                                 <span class="d_data ">2017-01-24</span>                            
 							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>                        
 						</div>
@@ -254,42 +254,42 @@
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵公</p>
                                 <span class="d_data ">2017-01-24</span>                            
 							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>                        
 						</div>
@@ -310,42 +310,42 @@
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data ">2017-01-24</span>                            
 							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>                        
 						</div>
@@ -365,42 +365,42 @@
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data ">2017-01-24</span>                            
 							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
-                            	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
+                            	<p>2017亚洲邀请赛非中国赛区分组对阵</p>
                                 <span class="d_data">2017-01-24</span>                            
 							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
-                            	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
+                            	<p>新春特别活动：按月来袭2017冬季珍藏</p>
                                 <span class="d_data">2017-01-27</span>                            
 							</a>                        
 						</div>
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div class="d_content d_poster">
-                    <div class="pictureSlider poster-main col-sm-5" data-setting='{"width":410,"height":230,"posterWidth":320,"posterHeight":360,"scale":0.8,"autoPlay":true,"delay":2000,"speed":300}'>
+                    <div class="pictureSlider poster-main col-sm-5" data-setting='{"width":410,"height":230,"posterWidth":320,"posterHeight":250,"scale":0.8,"autoPlay":true,"delay":2000,"speed":300}'>
                         <a class="poster_btn poster-prev"></a>
                         <ul class="poster-list">
                             <li class="poster-item ">
@@ -602,7 +602,7 @@
 						<div class="col-sm-5 col-xs-5 poster-item">
 							<a href="#">
 								<img class="img-responsive" src="images/Duel.jpg">
-								   <span>Snipers Duel（决斗）</span>
+								   <span>Snipers（决斗）</span>
 							  </a>
 							</div>
 							<div class="col-sm-5 col-xs-5 poster-item">
