--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			            <div class="item">
 			                <img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
-			                   <h2>昆山兴天下智能有限公司</h2>
+			                   <h2>昆山兴天下智能科技有限公司</h2>
 		                    	<p>2012年5月-2013年12月</p>
 		                    	<ul>
 		                        	<li>负责PIC线路板焊接</li>
@@ -215,16 +215,17 @@
 			                  	<h2>泰坦科技(贵阳分公司)</h2>
 		                    	<p>2013年3月-2015年8月</p>
 		                    	<ul>
-		                    		<li>负责维护项目上数据移交存储</li>
+		                    		<li>负责维护项目上数据库数据存储机制移交存储</li>
 		                        	<li>数据库脚本编写</li>
+									<li>创建SQL Server Database 数据表</li>
 		                    	</ul>
 			                </div>
 			            </div>
 			            <div class="item">
 			            	<img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
-			                  	<h2>瑞福科技有限公司</h2>
-		                    	<p>2015年10月-2016年12月</p>
+			                  	<h2>贵州世通科技有限公司</h2>
+		                    	<p>2015年10月-2017年1月</p>
 		                    	<ul>
 		                    		<li>据UI设计图完成公司项目web前端网页编写</li>
 		                        	<li>使用前端制作工具搭建页面，div+css 制作，实现页面的代码化</li>
@@ -300,6 +301,5 @@
 	<script src="bootstrap/js/jquery-1.9.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/index.js"></script>
-	<script src="js/ad.js"></script>
 	</body>
 </html>
