--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 			            	<img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
 			                  	<h2>陕西师范大学</h2>
-		                    	<p>2010年9月-2012年6月</p>
+		                    	<p>2009年4月-2012年7月</p>
 		                    	<ul>
-		                    		<li>就读计算机科学与技术学院网络工程系</li>
+		                    		<li>就读计算机科学与技术工程系</li>
 		                    		<li>获得中级网络工程师证书</li>
 		                    	</ul>
 			                </div>
@@ -213,11 +213,11 @@
 			            	<img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
 			                  	<h2>泰坦科技(贵阳分公司)</h2>
-		                    	<p>2013年3月-2015年8月</p>
+		                    	<p>2014年3月-2015年8月</p>
 		                    	<ul>
 		                    		<li>负责维护项目上数据库数据存储机制移交存储</li>
-		                        	<li>数据库脚本编写</li>
-									<li>创建SQL Server Database 数据表</li>
+		                        	<li>SQL Server数据库脚本编写</li>
+									<li>创建SQL Server Database数据表</li>
 		                    	</ul>
 			                </div>
 			            </div>
