--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 			            <div class="item">
 			            	<img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
-			                  	<h2>泰坦科技(贵阳分公司)</h2>
+			                  	<h2>贵州泰坦电气系统有限公司</h2>
 		                    	<p>2014年3月-2015年8月</p>
 		                    	<ul>
-		                    		<li>负责维护项目上数据库数据存储机制移交存储</li>
+		                    		<li>负责项目上数据库数据移交存储</li>
 		                        	<li>SQL Server数据库脚本编写</li>
 									<li>创建SQL Server Database数据表</li>
 		                    	</ul>
@@ -225,13 +225,26 @@
 			            	<img src="images/banner_bg.png" alt="">
 			                <div class="carousel-caption">
 			                  	<h2>贵州世通科技有限公司</h2>
-		                    	<p>2015年10月-2017年1月</p>
+		                    	<p>2015年10月-2016年8月</p>
 		                    	<ul>
 		                    		<li>据UI设计图完成公司项目web前端网页编写</li>
 		                        	<li>使用前端制作工具搭建页面，div+css 制作，实现页面的代码化</li>
 		                        	<li>实现项目前端页面交互效果</li>
 		                        	<li>配合后端开发人员调试页面样式和交互功能</li>
 		                    	</ul>
+			                </div>
+			            </div>
+			            <div class="item">
+			                <img src="images/banner_bg.png" alt="">
+			                <div class="carousel-caption">
+			                   <h2>贵州脸谱文化传媒有限公司</h2>
+		                    	<p>2016年10月-2017年2月</p>
+		                    	<ul>
+		                        	<li>负责公司承接网站的全部的前端工作，对PC网站和移动端网站进行制作、维护、优化，写出更符合语义化和W3C标准的代码，对网站进行优化，并进行网站的SEO工作</li>
+		                        	<li>配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果</li>
+									<li>早期配合后端进行网站模板的制作，并配合后端做相关功能的开发，可以读懂后端代码和简单的数据库操作语句</li>
+									<li>和客户沟通，按照客户要求对网站进行相应的修改</li>
+		                    	</ul>	
 			                </div>
 			            </div>
 			      </div>
