--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 			           	<li data-target="#banner" data-slide-to="1"></li>
 			           	<li data-target="#banner" data-slide-to="2"></li>
 			           	<li data-target="#banner" data-slide-to="3"></li>
+						<li data-target="#banner" data-slide-to="3"></li>
 			        </ol>
 			        <div class="carousel-inner">
 			        	<div class="item active">
