--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <![endif]-->
 </head>
 <body>
+<div class="loading">
+	<div class="loading-circle"></div>
+</div>
+<header>
 	<nav class="navbar navbar-custom  navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
@@ -25,15 +29,15 @@
 				<div class="collapse navbar-collapse navbar-right" id="top">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="#hidden">首页</a>
+							<a href="#Intro">首页</a>
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">详细<span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-menu-left">
-								<li><a href="#AboutMe">关于我</a></li>
-								<li><a href="#Skill">专业技能</a></li>
-								<li><a href="#Resume">个人简历</a></li>
+								<li><a href="#Intro">关于我</a></li>
+								<li><a href="#Experience">个人经历</a></li>
 								<li><a href="#Demo">作品Demo</a></li>
+								<li><a href="#Skill">专业技能</a></li>
 							</ul>
 						</li>
 						<li><a href="#Contact">联系我</a></li>
@@ -41,279 +45,168 @@
 				</div>
 			</div>
 	</nav>
-    <header id="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                  <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">我叫陆东明</h1>
-                        <p class="intro-text">想成为一名优秀的前端工程师<br/>
-							人生就是一段没有回头的道路，能做的只有努力向前</p>
-                      	<a href="#AboutMe" class="btn btn-circle page-scroll">
-                          <i class="fa fa-angle-double-down animated"></i>						
-						 </a>					
-						</div>
+	</header>
+    <section id="Intro">
+		<div class="banner">
+			<div class="inner">
+				<div class="hr_up"></div>
+					<h1 class="move">个人简历</h1>
+				<div class="hr_down "></div>
+				<p class="banner_text ">
+					<a href="#" class="a1 a2"><span class="myself"></span></a>&nbsp;&nbsp; 我是一个阳光积极的人，具有很强的团队精神。
+					目前有一年前端开发经验，熟悉 HTML+CSS网页标准布局、html5，css3以及Javascript语言，能熟练开发符合 W3C 标准的页面，
+					有良好的响应式设计思维和能力，有良好的编码习惯。</p>
+					<a href="#Experience" class="btn btn-circle page-scroll">
+					  <i class="fa fa-angle-double-down animated"></i>						
+					 </a>	
+
+			</div>
+		</div>
+    </section>		
+        <section id="Experience" class="exp-section">
+            <div class="wrapper">
+                <div>
+                    <h2 class="move2 "><span class="fa fa-flag-checkered"></span>工作经历</h2>
+
+                    <div class="hr  green"></div>
+                    <p class="move3 ">
+
+		             2009年4月-2012年7月,就读陕西师范大学计算机科学与技术工程系,获得中级网络工程师证书<br />
+					 <br />
+		                2012年5月-2013年12月,<昆山兴天下智能科技有限公司>,负责PIC线路板焊接以及简单编写单片机代码调式工作.对工程项目上家具智能开关控制模块代码修改编写与程序植入</br>
+						<br/>
+
+			             2014年3月-2015年8月,<贵州泰坦电气系统有限公司>,负责项目上数据库数据移交存储.SQL Server数据库脚本编写,创建SQL Server Database数据表
+						 工作之余自学C#编程.开始了解到web前端技术后产生极大兴趣,自学并熟练掌握html，css，js前端技术实现静态页面
+						 </br>
+						 </br>
+						2015年11月-2016年8月,<贵州世通科技有限公司>,据UI设计图完成公司项目web前端网页编写,使用前端制作工具搭建页面，div+css 制作，
+						实现页面的代码化.实现项目前端页面交互效果,配合后端开发人员调试页面样式和交互功能</br>
+						</br>
+		                 2016年9月-2017年2月,<贵州脸谱文化传媒有限公司>,负责公司承接网站的全部的前端工作，对PC网站和移动端网站进行制作、维护、优化，写出更符合语义化和W3C标准的代码，对网站进行优化，并进行网站的SEO工作
+						 配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果.</p>
+                </div>
+                <div class="item-group">
+                    <span class="item">敢于创新</span>
+                    <span class="item">团队协作</span>
+                    <span class="item">追求细节</span>
                 </div>
             </div>
-        </div>
-    </header>		
-	<section id="AboutMe">
-			<div class="container">
-				<br/>
-				<h2>关于我</h2>
-				<div class="row">
-					<div class="col-md-2" id="Am1">
-						<div class="img-box">
-							<img src="images/about1.png" alt="education">
-						</div>
-						<p>学历：大专</p>
-					</div>
-					<div class="col-md-2 col-md-offset-1" id="Am2">
-						<span id="Am-tip" class="label label-warning">click me!</span>
-						<div class="img-box">
-							<img src="images/about2.png" alt="age">
-						</div>
-						<p>年龄：27岁</p>
-				  </div>
-					<div class="col-md-2 col-md-offset-1" id="Am3">
-						<div class="img-box">
-							<img src="images/about3.png" alt="location">
-						</div>
-						<p>坐标:贵阳</p>
-					</div>
-					<div class="col-md-2 col-md-offset-1" id="Am4">
-						<div class="img-box">
-							<img src="images/about4.png" alt="state">
-						</div>
-						<p>状态:离职</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section id="Skill">
-		<div class="container">
-			<hr />
-			<br />
-			<h2>专业技能</h2>
-			<div id="skill_level">
-				<div class="level" style="border-right:1px solid #ccc">
-					<p>精通</p>
-				</div>
-				<div class="level">
-					<p>熟练</p>
-				</div>
-				<div class="level">
-					<p>掌握</p>
-				</div>
-				<div class="level">
-					<p>了解</p>
-				</div>
-				<div class="level" id="level_title">
-					<p>等级</p>
-				</div>
-			</div>
-			<ul id="skill_name">
-				<li id="0">HTML</li>
-				<li id="1">CSS+DIV</li>
-				<li id="2">JavaScript</li>
-				<li id="3">jQuery</li>
-				<li id="4">Bootstrap</li>
-				<li id="5">AngularJS</li>
-				<li id="6">HTML5</li>
-				<li id="7">CSS3</li>
-				<li id="8">Ajax</li>
-			</ul>
-			<ul id="skill_level_bar">
-				<li id="0_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="1_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="2_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="3_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="4_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="5_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="6_bar">
-					<div class="progress">
-						<div class="progress-bar  progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="7_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-				<li id="8_bar">
-					<div class="progress">
-						<div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<section id="Resume">
-		<div class="container">
-			<hr />
-			<br />
-			<h2>个人经历</h2>
-			<div class="row">
-				<div id="banner" class="carousel slide">
-			        <ol class="carousel-indicators">
-			        	<li data-target="#banner" data-slide-to="0" class="active"></li>
-			           	<li data-target="#banner" data-slide-to="1"></li>
-			           	<li data-target="#banner" data-slide-to="2"></li>
-			           	<li data-target="#banner" data-slide-to="3"></li>
-						<li data-target="#banner" data-slide-to="4"></li>
-			        </ol>
-			        <div class="carousel-inner">
-			        	<div class="item active">
-			            	<img src="images/banner_bg.png" alt="">
-			                <div class="carousel-caption">
-			                  	<h2>陕西师范大学</h2>
-		                    	<p>2009年4月-2012年7月</p>
-		                    	<ul>
-		                    		<li>就读计算机科学与技术工程系</li>
-		                    		<li>获得中级网络工程师证书</li>
-		                    	</ul>
-			                </div>
-			            </div>
-			            <div class="item">
-			                <img src="images/banner_bg.png" alt="">
-			                <div class="carousel-caption">
-			                   <h2>昆山兴天下智能科技有限公司</h2>
-		                    	<p>2012年5月-2013年12月</p>
-		                    	<ul>
-		                        	<li>负责PIC线路板焊接</li>
-		                        	<li>简单编写单片机代码调式工作</li>
-									<li>负责工程项目上家具智能开关控制模块代码修改编写与程序植入</li>
-		                    	</ul>	
-			                </div>
-			            </div>
-			            <div class="item">
-			            	<img src="images/banner_bg.png" alt="">
-			                <div class="carousel-caption">
-			                  	<h2>贵州泰坦电气系统有限公司</h2>
-		                    	<p>2014年3月-2015年8月</p>
-		                    	<ul>
-		                    		<li>负责项目上数据库数据移交存储</li>
-		                        	<li>SQL Server数据库脚本编写</li>
-									<li>创建SQL Server Database数据表</li>
-		                    	</ul>
-			                </div>
-			            </div>
-			            <div class="item">
-			            	<img src="images/banner_bg.png" alt="">
-			                <div class="carousel-caption">
-			                  	<h2>贵州世通科技有限公司</h2>
-		                    	<p>2015年10月-2016年8月</p>
-		                    	<ul>
-		                    		<li>据UI设计图完成公司项目web前端网页编写</li>
-		                        	<li>使用前端制作工具搭建页面，div+css 制作，实现页面的代码化</li>
-		                        	<li>实现项目前端页面交互效果</li>
-		                        	<li>配合后端开发人员调试页面样式和交互功能</li>
-		                    	</ul>
-			                </div>
-			            </div>
-			            <div class="item">
-			                <img src="images/banner_bg.png" alt="">
-			                <div class="carousel-caption">
-			                   <h2>贵州脸谱文化传媒有限公司</h2>
-		                    	<p>2016年10月-2017年2月</p>
-		                    	<ul>
-		                        	<li>负责公司承接网站的全部的前端工作，对PC网站和移动端网站进行制作、维护、优化，写出更符合语义化和W3C标准的代码，对网站进行优化，并进行网站的SEO工作</li>
-		                        	<li>配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果</li>
-									<li>早期配合后端进行网站模板的制作，并配合后端做相关功能的开发，可以读懂后端代码和简单的数据库操作语句</li>
-									<li>和客户沟通，按照客户要求对网站进行相应的修改</li>
-		                    	</ul>	
-			                </div>
-			            </div>
-			      </div>
-			        <a class="left carousel-control" href="#banner" data-slide="prev">
-			        	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    					<span class="sr-only">Previous</span>
-			        </a>
-			        <a class="right carousel-control" href="#banner" data-slide="next">
-			        	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    					<span class="sr-only">Next</span>
-			        </a>
-			    </div>
-			</div>
-		</div>
-	</section>
-	<section id="Demo">
-		<div class="container">
-			<hr />
-			<br />
-			<h2>个人作品</h2>
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<div class="panel panel-gray">
-						<div class="panel-heading">DOTA2官网</div>
-						<div class="panel-body">
-							<a href="demo/Dota2/index.html" class="thumbnail">
-							    <img src="images/demo1.png" alt="DOTA2官网" title="DOTA2官网" />
-							</a>
-						</div>
-					</div>
-				</div>
-				</div>
-			</div>	
-		</div>
-	</section>
-	<section id="Contact">
+        </section>
+
+        <section id="Demo" class="demo-section">
+            <h2 class="demo_h2"><span class="fa fa-terminal"></span>项目经验</h2>
+
+            <div class="demo">
+                <div class="img_demo">
+                    <a href="demo/Dota2/index.html" title="实战项目" target="_blank"> <img
+                            class="moveimg1 " src="images/DOTA2.png" alt="DOTA2官网"/>
+                    </a>
+                </div>
+                <div class="text_demo movetext1 ">
+                    <h2>bootstrap实战项目《模仿DOTA2官网》</h2>
+                    <p>&nbsp;&nbsp;业余时间，使用Bootstrap框架模仿DOTA2布局。并兼顾了对Firefox、Chrome、Safari等主流浏览器的兼容性调试处理。
+                    </p><br>
+
+                    <p><span class="fa fa-hand-o-left"></span>|点击图片查看项目</p>
+                </div>
+            </div>
+        </section>
+        <section id="Skill" class="section skill-section">
+            <div class="wrapper">
+                <div class="heading-wrapper">
+                    <h2 class="cardh2 "><span class="fa fa-key"></span>专业技能</h2>
+
+                    <div class="hr cardhr"></div>
+                    <div class="sub-heading  cardtext ">
+                       因为对前端技术的酷爱，没有给自己划定知识界限，喜欢挑战和学习实战项目中遇到的各种问题。精通html，css，熟练使用jQuery等前端语言，具有响应式编程思维，
+                        对html5和css3能够灵活运用，深入学习过国外的前端响应式框架Bootstrap。目前正在学习react js，nodejs等前端技术。
+                    </div>
+                </div>
+                <div class="card-group clear ">
+                    <div class="card  cardone col-md-3">
+                        <h3>HTML+CSS</h3>
+
+
+                        <div id="myStat" data-dimension="170" data-text="90%" data-info="html+css" data-width="5"
+                             data-fontsize="38"
+                             data-percent="90" data-fgcolor="#219C98" data-bgcolor="#4ebdd6" data-fill="transparent"></div>
+
+                    </div>
+                    <div class="card  cardtow col-md-3">
+                        <h3>JS</h3>
+
+                        <div id="myStat2" data-dimension="170" data-text="60%" data-info="JavaScript" data-width="5"
+                             data-fontsize="38" data-percent="60" data-fgcolor="#219C98" data-bgcolor="#4ebdd6"
+                            data-fill="transparent"></div>
+
+                    </div>
+                    <div class="card cardthree cardvip col-md-3">
+                        <h3>jQuery</h3>
+
+                        <div id="myStat3" data-dimension="170" data-text="70%" data-info="jQuery" data-width="5"
+                             data-fontsize="38" data-percent="70" data-fgcolor="#219C98" data-bgcolor="#4ebdd6" data-fill="transparent"
+                             data-icon="fa-task"></div>
+
+                    </div>
+                    <div class="card cardfour col-md-3">
+                        <h3>Bootstrap</h3>
+
+
+                        <div id="myStat4" data-dimension="170" data-text="50%" data-info="bootstrap" data-width="5"
+                             data-fontsize="38" data-percent="50" data-fgcolor="#219C98" data-bgcolor="#4ebdd6" data-fill="transparent"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+	<section id="Contact" class="section-contact">
 		<div class="container">
 			<div class="row">
+				<a href="#" class="a1 a2 a3">
 				<div class="col-md-2">
 					<img src="images/send.png">
 					<h2>您可以通过这些方式联系我</h2>
+					
 				</div>
+				</a>
 				<div class="col-md-4 col-md-offset-2" id="Contact-body">
-					<div class="clearfix">
+					<div class="clear">
 						<img src="images/QQ.png" alt="QQ">
 						<p class="Contact-title">QQ：343290019</p>
 					</div>
-					<div class="clearfix">
+					<div class="clear">
 						<img src="images/email.png" alt="email">
 						<p class="Contact-title">E-mail:dongminglugit@hotmail.com</p>
 					</div>
-					<div class="clearfix">
+					<div class="clear">
 						<img src="images/phone.png" alt="phone">
 						<p class="Contact-title">手机：18684102204</p>
 					</div>
-					<div class="clearfix">
+					<div class="clear">
 						<img src="images/wechat.png" alt="wechat">
 						<p class="Contact-title">微信号：18684102204</p>
 					</div>
 				</div>
-				<div class="col-md-3 col-md-offset-1" id="code">
-					<img src="images/code.png" alt="code">
-				</div>
+				<a href="#" class="a1 a2">
+					<div class="col-md-3 col-md-offset-1" id="code">
+						<img src="images/code.png" alt="code">
+					</div>
+				</a>
 			</div>
 		</div>
 	</section>
 	<script src="bootstrap/js/jquery-1.9.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.circliful.min.js"></script>
 	<script src="js/index.js"></script>
+	<script>
+    $(function () {
+        $('#myStat').circliful();
+        $('#myStat2').circliful();
+        $('#myStat3').circliful();
+        $('#myStat4').circliful();
+    });
+</script>
 	</body>
 </html>
