--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 						2015年11月-2016年8月,<贵州世通科技有限公司>,据UI设计图完成公司项目web前端网页编写,使用前端制作工具搭建页面，div+css 制作，
 						实现页面的代码化.实现项目前端页面交互效果,配合后端开发人员调试页面样式和交互功能</br>
 						</br>
-		                 2016年9月-2017年2月,<贵州脸谱文化传媒有限公司>,负责公司承接网站的全部的前端工作，对PC网站和移动端网站进行制作、维护、优化，写出更符合语义化和W3C标准的代码，对网站进行优化，并进行网站的SEO工作
-						 配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果.</p>
+		                 2016年9月-2017年2月,<贵州脸谱文化传媒有限公司>,负责公司承接网站的前端工作配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果.</p>
                 </div>
                 <div class="item-group">
                     <span class="item">敢于创新</span>
