--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 		                2012年5月-2013年12月,<昆山兴天下智能科技有限公司>,负责PIC线路板焊接以及简单编写单片机代码调式工作.对工程项目上家具智能开关控制模块代码修改编写与程序植入</br>
 						<br/>
 
-			             2014年3月-2015年8月,<贵州泰坦电气系统有限公司>,负责项目上数据库数据移交存储.SQL Server数据库脚本编写,创建SQL Server Database数据表
+			             2014年3月-2015年10月,<贵州泰坦电气系统有限公司>,负责项目上数据库数据移交存储.SQL Server数据库脚本编写,创建SQL Server Database数据表
 						 工作之余自学C#编程.开始了解到web前端技术后产生极大兴趣,自学并熟练掌握html，css，js前端技术实现静态页面
 						 </br>
 						 </br>
 						2015年11月-2016年8月,<贵州世通科技有限公司>,据UI设计图完成公司项目web前端网页编写,使用前端制作工具搭建页面，div+css 制作，
 						实现页面的代码化.实现项目前端页面交互效果,配合后端开发人员调试页面样式和交互功能</br>
 						</br>
-		                 2016年9月-2017年2月,<贵州脸谱文化传媒有限公司>,负责公司承接网站的前端工作配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果.</p>
+		                 2016年11月-至今,<贵州脸谱文化传媒有限公司>,负责公司承接网站的前端工作配合设计师的工作，对设计稿尽量进行百分百的还原，网页效果的制作，并兼容各大主流的浏览器，给访客呈现更好的视觉效果.</p>
                 </div>
                 <div class="item-group">
                     <span class="item">敢于创新</span>
